--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,6 +14,12 @@ body {
 .img-background {
 	background-color: #f0f4f5;
 }
+.css-form textarea {
+	height: 166px;
+}
+.css-form > .form-group:last-child {
+	margin-bottom: 0px;
+}
 .css-form textarea.ng-invalid.ng-touched {
   background-color: #FA787E;
 }
@@ -27,4 +33,10 @@ body {
 .hint {
 	padding-top: 9px;
 	padding-left: 3px;
+}
+.spacer {
+  margin-top: 40px;
+}
+.left-nav-list > li {
+	line-height: 29px;
 }
