fixed error message

--- a/app/assets/javascripts/templates/home.html
+++ b/app/assets/javascripts/templates/home.html
@@ -64,7 +64,7 @@
               </li>
             </ul>
           </div> <!-- end of alert success -->
-          <form role="form" class="css-form clearfix" name="vm.resourceForm" ng-submit="vm.save()">
+          <form role="form" class="css-form clearfix" name="vm.resourceForm" novalidate>
             <div class="form-group">
               <textarea class="form-control" ng-required="true"
               ng-model="vm.resource.content" ng-maxlength="140" placeholder="Describe your data goals in a short summary."></textarea>
